# zero-to-prod

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
