[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ["Tugkan Kibar <tugkan@orangebandits.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
