[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ["Tugkan Kibar <tugkan@orangebandits.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.1"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
