[package]
name = "zero_to_prod"
version = "0.1.0"
authors = ["Tugkan Kibar <tugkan@orangebandits.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.18.5", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.1"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"
serde-aux = "3.0.1"

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
once_cell = "1.10.0"